--- a/main/ToS_Forum_Mafia_Note_Taker/makefile
+++ b/main/ToS_Forum_Mafia_Note_Taker/makefile
@@ -1,3 +1,4 @@
+travis: build build-app
 build:
 	rm -Rf bin
 	mkdir -p bin
@@ -8,7 +9,6 @@ build-app:
 	mkdir -p lib
 	wget https://java.net/projects/appbundler/downloads/download/appbundler-1.0.jar
 	mv appbundler-1.0.jar lib
-	touch Info.plist
 	mkdir -p dist
 	ant bundle-FMNT
 	rm Info.plist
