squash! Add basic Travis integration

--- a/main/ToS_Forum_Mafia_Note_Taker/makefile
+++ b/main/ToS_Forum_Mafia_Note_Taker/makefile
@@ -6,10 +6,11 @@ build:
 run:
 	java -cp bin main.Main "$(file)"
 build-app:
+	$(shell echo $JAVA_HOME)
 	mkdir -p lib
 	wget https://java.net/projects/appbundler/downloads/download/appbundler-1.0.jar
 	mv appbundler-1.0.jar lib
 	mkdir -p dist
-	JAVA_HOME=/usr/lib/foo ant bundle-FMNT
+	ant bundle-FMNT
 	rm Info.plist
 	rm -R lib
